fix overflow y

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
   width: 100%;
   min-height: 100vh;
